Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.9.0 Beta 1
-
Fix Version/s: 5.9.0 Beta 2
-
Component/s: Positioning
-
Labels:None
Description
In file included from /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtbase/include/QtGui/qtguiglobal.h:1:0, from /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtbase/include/QtGui/../../src/gui/math3d/qmatrix4x4.h:43, from /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtbase/include/QtGui/qmatrix4x4.h:1, from /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtlocation/src/positioning/qdoublematrix4x4_p.h:58, from /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtlocation/src/positioning/qdoublematrix4x4.cpp:40: /tmp/e2/build/qt-everywhere-opensource-src-5.9.0-beta/qtbase/include/QtGui/../../src/gui/kernel/qtguiglobal.h:44:32: fatal error: QtGui/qtgui-config.h: No such file or directory