Remove QtGui dependency from QDoubleMatrix4x4

This fixes the -no-gui build.

Task-number: QTBUG-60062
Change-Id: I71400dfddac8ddf6a74906be8ba1272bf4a86781
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>